dcache: use charset constant instead of String-based dynamic discovery
Motivation:
In several places dCache uses UTF-8 encoded values. The charset is in some cases still provided via String and thus dynamically discovered at runtime. Starting  with Java7, java.nio.charset.StandardCharsets provides a set of constants for various charsets, which are initialized during jvm initialization, which makes it more efficient.

Modification:
Replaced String-based charset discovery with charset constants.

Result:
No user-observable changes. Better efficiency and removal of previously thrown UnsupportedEncodingException.

Target: master
Issue: #3812
Requires-notes: no
Requires-book: no
Patch: https://rb.dcache.org/r/13104/
Acked-by: Paul Millar